testsuite/poke.pkl/int-struct-type-diag-3.pk
/* { dg-do compile } */

type Foo =
  struct int<32>
  {
    string je; /* { dg-error "invalid field.*\n.*expected integral, offset or integral struct" } */
  };
